P2 - Tests in the works, git ignore file configured.

--- a/P2_Sendes/ApiLayer/HTML_CSS/CSS/style.css
+++ b/P2_Sendes/ApiLayer/HTML_CSS/CSS/style.css
@@ -3,28 +3,54 @@
     right:10px;
     background-color: blanchedalmond;
 }
+@media screen and (min-device-width:800px){
+    /* width: 80vw; */
+    div > #loginForm{
+        justify-content: center;
+        width: 50vw;
+    }
+}
+
+@media screen and (max-device-width:700px){
+    /* width: 80vw; */
+    div > #loginForm{
+        justify-content: center;
+        width: 50vw;
+    }
+}
 
 #loginFormFields{
     /* text-align: center; */
-    border: solid black 10px;
+    border: dashed
+     black 10px;
+    
+    /* justify-content: center; */
+    /* width: 90vw; */
     /* align-items: center; */
     color: red;
+    background-color: #9a3b3b8d;
     
 }
 #loginFormFields > form{
     /* text-align: center; */
-    border: solid white 10px;
+    border: dashed white 10px;
+    background-color: rgba(247, 170, 62, 0.519);
+    border-radius: 60px;
     margin-left: 20px;
     margin-right: 20px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     padding-top: 30px;
     padding-bottom: 30px;
     /* align-items: center; */
     color: red;
     
 }
-#loginFormUsername {
+div {
     color: black;
     
 }
