--- a/OFFICIAL_PROJECT2/Final_Project/AngularLayer/src/styles.css
+++ b/OFFICIAL_PROJECT2/Final_Project/AngularLayer/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    border: 0px;
+    margin: 0%;
+    padding: 0%;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0%;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+    
+}
