P2 - update to styles

--- a/OFFICIAL_PROJECT2/Final_Project/AngularLayer/src/app/Components/UIDESIGN/uidesign/uidesign.component.html
+++ b/OFFICIAL_PROJECT2/Final_Project/AngularLayer/src/app/Components/UIDESIGN/uidesign/uidesign.component.html
@@ -1,13 +1,6 @@
-<div class="HUD SCREEN DASHBOARD">
+<div class="HUD ">
     <p>uidesign works!</p>
     <div>
-        <div>
-            <!-- <mat-sidenav-container>
-                <mat-sidenav>Start</mat-sidenav>
-                <mat-sidenav position="end">End</mat-sidenav>
-                <section>Main</section>
-              </mat-sidenav-container> -->
-        </div>
         <div>
             <app-nav></app-nav>
         </div>
