--- a/OFFICIAL_PROJECT2/Final_Project/AngularLayer/src/app/Components/User/profile/profile.component.css
+++ b/OFFICIAL_PROJECT2/Final_Project/AngularLayer/src/app/Components/User/profile/profile.component.css
@@ -4,6 +4,7 @@ div>div{
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
     grid-auto-rows: minmax(10px, auto);
+    max-width: 100%;
 }
 
 div>div>img{
@@ -19,4 +20,24 @@ div>div>img{
 .PROFILEinfo{
     grid-column: 2;
     grid-row: 2;
+}
+
+
+ul{
+    display: block;
+    text-align: center;
+    list-style-type: none;
+    margin: 0;
+    padding:0;
+    overflow: hidden;
+}
+li{
+    display: block;
+    margin: 0;
+    padding: 0;
+
+}
+
+a{
+    padding: 14px 16px;
 }
