--- a/P2_Sendes/Project2Ecommerce_NewProj/AngularLayer/src/app/AllComponents/nav-bar/nav-bar.component.html
+++ b/P2_Sendes/Project2Ecommerce_NewProj/AngularLayer/src/app/AllComponents/nav-bar/nav-bar.component.html
@@ -6,7 +6,7 @@
         </li>
         <li>
             <!-- <app-user></app-user> -->
-            <a routerLink="/products" routerLinkActive="active" ariaCurrentWhenActive="page">Products</a>
+            <a routerLink="/store" routerLinkActive="active" ariaCurrentWhenActive="page">Store</a>
             <!-- <app-cart></app-cart> -->
             <!-- <app-user-request></app-user-request> -->
             <!-- <a routerLink="/Products" routerLinkActive="active" ariaCurrentWhenActive="page">Products</a> -->
@@ -21,4 +21,5 @@
             <app-auth-buttons></app-auth-buttons>
         </li>
     </ul>
+    <div><div><app-cart></app-cart></div></div>
 </nav>
