--- a/P2_Sendes/Project2Ecommerce_NewProj/AngularLayer/src/app/AllComponents/products/products.component.html
+++ b/P2_Sendes/Project2Ecommerce_NewProj/AngularLayer/src/app/AllComponents/products/products.component.html
@@ -1,22 +1,15 @@
 <!-- <button (click)="displayProducts()">Display products</button> -->
+This is the product
+<div>
+    <div >
+        {{currentProduct.Title}}
+        <!-- <h3>This {{currentProduct.Title}}</h3>
+        <p>costs {{currentProduct.Price}}</p>
+        <p>Only {{currentProduct.Inventory}} left in stock</p> -->
 
+    </div>
+    <!-- <app-store (add_TOPRODUCTEVENT)="getProduct($event)">
+    </app-store> -->
+</div>
 
-<ul id="screen" *ngIf="allProducts != null">
-    <li *ngFor="let product of allProducts" >
-            <table id="ProductTable">
-                <div>
-                    <tr><th [ngModel]="product.title">{{product.title}}</th></tr>
-                    <img src="https://source.unsplash.com/random/200x200?sig=incrementingIdentifier" alt="">
-                </div>
-                <div>
-                    <tr><td [ngModel]="product.id">Id: {{product.id}}</td></tr>
-                    <tr><td>Description: {{product.description}}</td></tr>
-                    <tr><td>Price: {{product.price}}</td></tr>
-                    <tr><td>{{product.inventory}} left in stock</td></tr>
-                    <tr><td>{{product.dateCreated}} left in stock</td></tr>
-                </div>
-                <tr><td><button (click)="addToCart(product.id)">Add to Cart</button></td></tr>
-            </table>
-    </li>
-</ul>
 
